[gd_scene load_steps=8 format=3 uid="uid://bdp3nb8qiwdwj"]

[ext_resource type="Script" uid="uid://5eprnq5c85cg" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://cjd66d2mjkpyi" path="res://assets/ui/main_menu.png" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://3und8o15d5xv" path="res://assets/ui/continue_button.png" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://dnx5h52n4igmv" path="res://assets/ui/new_game_button.png" id="4_tbmy8"]
[ext_resource type="Texture2D" uid="uid://bhslcdpll7e2p" path="res://assets/ui/options_button.png" id="5_jk1qb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("2_rtw2f")

[sub_resource type="GDScript" id="GDScript_8ln24"]
resource_name = "levelText"
script/source = "extends RichTextLabel

const save_location = \"user://level.json\"

func _ready() -> void:	
	if FileAccess.file_exists(save_location):
		var file = FileAccess.open(save_location, FileAccess.READ)
		var data = file.get_var()
		file.close()
		
		var save_data = data.duplicate()
		
		self.text = \"Level \"+ str(save_data.level)
	else:
		var file = FileAccess.open(save_location, FileAccess.WRITE)
		file.store_var({\"level\": 1})
		self.text = \"Level \" + str(1)
		file.close()

func _process(delta: float) -> void:
	pass
"

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -288.0
offset_right = 512.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_8ln24")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 576.0
theme_override_styles/panel = SubResource("StyleBoxTexture_fu7sn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -130.0
offset_right = -80.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_oa1go")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ContinueButton"]
layout_mode = 0
offset_left = 300.0
offset_top = 66.0
offset_right = 380.0
offset_bottom = 96.0
text = "LEVEL "
script = SubResource("GDScript_8ln24")

[node name="NewGameButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_tbmy8")

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_jk1qb")

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
